--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "ava-test",
-  "version": "0.1.0",
+  "name": "exotic-teckel",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "convert:webp": "node scripts/convert-to-webp.js",
+    "update:images": "node scripts/update-image-references.js"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
@@ -29,6 +31,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
